--- a/v0.1
+++ b/v0.1
@@ -1,3 +1,7 @@
 Drive to v0.1 below (Unity Scene with planes, Asuna prefab and Animated RPG Char)
 
 https://drive.google.com/drive/u/6/folders/1SFn57m87EDO6iw6cDHx2HTnD7OLU43bk
+
+character controller. not just to be marked (rest in drive)
+
+N/A
