--- a/v0.2
+++ b/v0.2
@@ -1,3 +1,7 @@
 Drive to v0.2 below (Unity Scene with planes, Asuna prefab and Animated RPG Char)
 
 https://drive.google.com/file/d/1c-TnI_EFHCTZQa1UqNbbwLxW-OK8aG4m/view?usp=drive_link
+
+character controller. not just to be marked (rest in drive)
+
+N/A
