--- a/v0.5
+++ b/v0.5
@@ -1,3 +1,7 @@
 Drive to v0.5 below
 
 https://drive.google.com/file/d/1OMRX3scCPizN2SSKJaup0EYgEMAQo_zz/view?usp=sharing
+
+character controller. not just to be marked (rest in drive)
+
+N/A
