--- a/v1.1
+++ b/v1.1
@@ -1,3 +1,7 @@
 Link to v1.1 below
 
 https://drive.google.com/file/d/13fbbfDWozGjP0PPHn9D-2_tsDX9oLp7R/view?usp=drive_link
+
+character controller. not just to be marked (rest in drive)
+
+N/A
