--- a/v1.2
+++ b/v1.2
@@ -1,3 +1,7 @@
 Drive link to v1.2
 
 https://drive.google.com/file/d/1w_O6kxvpv-8QYsIcvLztWMt7RUnKNGNL/view?usp=drive_link
+
+character controller. not just to be marked (rest in drive)
+
+N/A
