--- a/v1.3
+++ b/v1.3
@@ -1,3 +1,7 @@
 link to v1.3 on drive
 
 https://drive.google.com/file/d/1uopU33bJ7USkPgLk5JcP5eyHxh1-0N2Q/view?usp=drive_link 
+
+character controller. not just to be marked (rest in drive)
+
+N/A
